--- a/NorthWestLabs/Views/Seattle/Index.cshtml
+++ b/NorthWestLabs/Views/Seattle/Index.cshtml
@@ -83,9 +83,9 @@
             @Html.DisplayFor(modelItem => item.DisID)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ClientID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ClientID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ClientID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.ClientID }, new { @class = "btn btn-primary" }) <br />
+            @Html.ActionLink("Details", "Details", new { id=item.ClientID }, new { @class = "btn btn-primary" }) <br />
+            @Html.ActionLink("Delete", "Delete", new { id=item.ClientID }, new { @class = "btn btn-primary" })
         </td>
     </tr>
 }
