--- a/NorthWestLabs/Views/Clients/Create.cshtml
+++ b/NorthWestLabs/Views/Clients/Create.cshtml
@@ -82,7 +82,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ClStatus, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ClStatus, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ClStatus, new { htmlAttrubutes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.ClStatus, "", new { @class = "text-danger" })
             </div>
         </div>
