--- a/NorthWestLabs/Views/Home/Index.cshtml
+++ b/NorthWestLabs/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 @Html.ActionLink("Pricing Info", "Pricing")
 <br />
 
-@Html.ActionLink("Client Log In", "LogInClient")
+@Html.ActionLink("Client Log In", "Login")
 <br />
 
 @Html.ActionLink("Create Profile", "CreateProfile")
