--- a/NorthWestLabs/Views/Seattle/WorkOrderCreate.cshtml
+++ b/NorthWestLabs/Views/Seattle/WorkOrderCreate.cshtml
@@ -51,7 +51,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ReceivedBy, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReceivedBy, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ReceivedBy, new SelectList(ViewBag.Employees, "EmpID", "EmpFName"))
                 @Html.ValidationMessageFor(model => model.ReceivedBy, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -67,7 +67,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ClientID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ClientID, new SelectList(ViewBag.Clients, "ClientID", "ClFName"))
                 @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
             </div>
         </div>
