--- a/NorthWestLabs/Views/Seattle/WorkOrderEdit.cshtml
+++ b/NorthWestLabs/Views/Seattle/WorkOrderEdit.cshtml
@@ -53,7 +53,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ReceivedBy, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReceivedBy, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ReceivedBy, new SelectList(ViewBag.Employees, "EmpID", "EmpFName"))
                 @Html.ValidationMessageFor(model => model.ReceivedBy, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -69,7 +69,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ClientID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ClientID, new SelectList(ViewBag.Clients, "ClientID", "ClFName"))
                 @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -77,7 +77,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SummaryStatus, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SummaryStatus, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.SummaryStatus, new SelectList(ViewBag.Summary, "StatusDesc", "StatusDesc"))
                 @Html.ValidationMessageFor(model => model.SummaryStatus, "", new { @class = "text-danger" })
             </div>
         </div>
