--- a/NorthWestLabs/Views/Home/Index.cshtml
+++ b/NorthWestLabs/Views/Home/Index.cshtml
@@ -11,10 +11,13 @@
 @Html.ActionLink("Pricing Info", "Pricing")
 <br />
 
-@Html.ActionLink("Client Log In", "Login")
+@Html.ActionLink("Client Log In", "ClLogin")
+<br />
+
+@Html.ActionLink("Employee Log In", "EmpLogin")
 <br />
 
 @Html.ActionLink("Create Profile", "CreateProfile")
 <br />
 
-
+@Html.ActionLink("View Clients", "ViewClients")
