--- a/NorthWestLabs/Views/Home/ViewClients.cshtml
+++ b/NorthWestLabs/Views/Home/ViewClients.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<NorthWestLabs.Models.Client>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "ViewClients";
 }
 
-<h2>Index</h2>
+<h2>ViewClients</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "CreateProfile")
 </p>
 <table class="table">
     <tr>
