--- a/NorthWestLabs/Views/Home/CreateProfile.cshtml
+++ b/NorthWestLabs/Views/Home/CreateProfile.cshtml
@@ -71,6 +71,16 @@
         </div>
 
         <div class="form-group">
+            @Html.HiddenFor(model => model.BankAccouNum, htmlAttributes: new { @class = "control-label col-md-2" })
+            <!--
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BankAccouNum, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.BankAccouNum, "", new { @class = "text-danger" })
+            </div>
+            -->
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
@@ -79,21 +89,13 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ClStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.HiddenFor(model => model.ClStatus, htmlAttributes: new { @class = "control-label col-md-2", @Value = "New" })
+            <!--
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ClStatus, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ClStatus, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-     
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DisID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DisID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DisID, "", new { @class = "text-danger" })
-            </div>
+            -->
         </div>
 
         <div class="form-group">
