--- a/NorthWestLabs/Views/Home/Index.cshtml
+++ b/NorthWestLabs/Views/Home/Index.cshtml
@@ -21,3 +21,6 @@
 <br />
 
 @Html.ActionLink("View Clients", "ViewClients")
+<br />
+
+@Html.ActionLink("Submit New Quote Request", "QuoteCreate", "Client")
