--- a/NorthWestLabs/Views/Home/About.cshtml
+++ b/NorthWestLabs/Views/Home/About.cshtml
@@ -3,12 +3,36 @@
     ViewBag.Title = "About";
 }
 
-<h2>About</h2>
-<h3>Northwest Labs</h3>
+<h1>About Northwest Labs</h1>
 
-<p>Company Info</p>
-<p>Company Info</p>
-<p>Company Info</p>
-<p>Company Info</p>
-<p>Company Info</p>
+<div class="jumbotron">
+    <h3>Our Mission</h3>
+    <ul>
+        <li>
+            Here at Northwest Labs we strive to get the precise, well documented and accurately reported results that you need.
+        </li>
+        <li>
+            We process every order like it is our only order becasue we beleive that our customers deserve the highest quality results.
+        </li>
+        
+    </ul>
+</div>
+
+<h1>Contact Us</h1>
+
+<div class="jumbotron">
+    <ul>
+        <li>
+            Call Us: 801-641-5540            
+        </li>
+        <li>
+            Email Us: info@northwestlabs.net
+        </li>
+        <li>
+            Create and Account Today!
+        </li>
+    </ul>
+</div>
+
+
 
