--- a/NorthWestLabs/Views/Home/Pricing.cshtml
+++ b/NorthWestLabs/Views/Home/Pricing.cshtml
@@ -3,6 +3,47 @@
     ViewBag.Title = "Pricing";
 }
 
-<h2>Pricing</h2>
+<h1>Pricing</h1>
 
-<p>Here is some cool price info</p>
+<div class="jumbotron">
+    <h2>Basic Tests</h2>
+    <br />
+    <p><strong>Biochemical Pharmacology (BP)</strong></p>
+    <p>Description of Test</p>
+        <ul>
+            <li>$300</li>
+        </ul>
+    <p><strong>DiscoveryScreen® (DS)</strong></p>
+    <p>Description of Test</p>
+        <ul>
+            <li>$400</li>
+        </ul>
+    <p><strong>ImmunoScreen® (IS)</strong></p>
+    <p>Description of Test</p>
+        <ul>
+            <li>$600</li>
+        </ul>
+    <p><strong>ProfilingScreen® (PF)</strong></p>
+    <p>Description of Test</p>
+        <ul>
+            <li>$200</li>
+        </ul>
+    <p><strong>PharmaScreen® (PS)</strong></p>
+    <p>Description of Test</p>
+        <ul>
+            <li>$900</li>
+        </ul>
+    <p><strong>CustomScreen™ (CS)</strong></p>
+    <p>Description of Test</p>
+        <ul>
+            <li>$700</li>
+        </ul>
+</div>
+
+<div class="jumbotron">
+    <h2>Other Tests</h2>
+    <p>We offer a wide variety of tests, all with differing prices.</p>
+    <p>Get all the right tests for your Assay with no hassle!</p>
+    <p>Call or create a profile today!</p>
+    <h5>Get a Quote!</h5>
+</div>
