--- a/NorthWestLabs/Views/Clients/EditProfile.cshtml
+++ b/NorthWestLabs/Views/Clients/EditProfile.cshtml
@@ -1,11 +1,10 @@
 ﻿@model NorthWestLabs.Models.Client
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "EditProfile";
 }
 
-<h2>Edit</h2>
-
+<h2>EditProfile</h2>
 
 @using (Html.BeginForm())
 {
@@ -82,27 +81,16 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ClStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ClStatus, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ClStatus, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BankID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BankID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BankID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DisID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DisID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DisID, "", new { @class = "text-danger" })
-            </div>
+            @Html.HiddenFor(model => model.ClStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+            
         </div>
 
         <div class="form-group">
@@ -113,10 +101,3 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
