--- a/NorthWestLabs/Views/Home/CreateProfile.cshtml
+++ b/NorthWestLabs/Views/Home/CreateProfile.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "CreateProfile";
 }
 
-<h2>CreateProfile</h2>
+<h2>Create Your Profile</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -89,7 +89,7 @@
         </div>
 
         <div class="form-group">
-            @Html.HiddenFor(model => model.ClStatus, htmlAttributes: new { @class = "control-label col-md-2", @Value = "New" })
+            @Html.HiddenFor(model => model.ClStatus, htmlAttributes: new { @class = "control-label col-md-2", @Value = "New Client" })
             <!--
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ClStatus, new { htmlAttributes = new { @class = "form-control" } })
@@ -105,7 +105,3 @@
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
