--- a/NorthWestLabs/Views/Clients/ViewProfile.cshtml
+++ b/NorthWestLabs/Views/Clients/ViewProfile.cshtml
@@ -89,6 +89,6 @@
 <p>
     @Html.ActionLink("Edit", "EditProfile", new { id = Model.ClientID })
     <br /><br />
-    @Html.ActionLink("Back to Client Home", "ClientHome", new { id = Model.ClientID })
+    @Html.ActionLink("Back to Client Home", "ClientHome2", new { id = Model.ClientID })
 </p>
 
