--- a/NorthWestLabs/Views/Singapore/EditWorkOrder.cshtml
+++ b/NorthWestLabs/Views/Singapore/EditWorkOrder.cshtml
@@ -1,16 +1,15 @@
 ﻿@model NorthWestLabs.Models.WorkOrder
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "WorkOrderEdit";
 }
 
-<h2>Edit</h2>
-
+<h2>WorkOrderEdit</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>WorkOrder</h4>
         <hr />
@@ -54,24 +53,32 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ReceivedBy, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReceivedBy, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ReceivedBy, new SelectList(ViewBag.Employees, "EmpID", "EmpFName"))
                 @Html.ValidationMessageFor(model => model.ReceivedBy, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.WOResult, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.WOReport, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.WOResult, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.WOResult, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.WOReport, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.WOReport, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ClientID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ClientID, new SelectList(ViewBag.Clients, "ClientID", "ClFName"))
                 @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.SummaryStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.SummaryStatus, new SelectList(ViewBag.Summary, "StatusDesc", "StatusDesc"))
+                @Html.ValidationMessageFor(model => model.SummaryStatus, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -84,9 +91,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "ListWorkOrder")
 </div>
-
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
