--- a/NorthWestLabs/Views/Singapore/ListWorkOrder.cshtml
+++ b/NorthWestLabs/Views/Singapore/ListWorkOrder.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<NorthWestLabs.Models.WorkOrder>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "ListWorkOrder";
 }
 
-<h2>Index</h2>
+<h2>ListWorkOrder</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -27,10 +27,13 @@
             @Html.DisplayNameFor(model => model.ReceivedBy)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.WOResult)
+            @Html.DisplayNameFor(model => model.WOReport)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.ClientID)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.SummaryStatus)
         </th>
         <th></th>
     </tr>
@@ -53,15 +56,17 @@
             @Html.DisplayFor(modelItem => item.ReceivedBy)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.WOResult)
+            @Html.DisplayFor(modelItem => item.WOReport)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ClientID)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.WrkOrdID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.WrkOrdID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.WrkOrdID })
+            @Html.DisplayFor(modelItem => item.SummaryStatus)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "EditWorkOrder", new { id=item.WrkOrdID }) |
+            @Html.ActionLink("Details", "WorkOrderDetails", new { id=item.WrkOrdID })
         </td>
     </tr>
 }
