--- a/NorthWestLabs/Views/Singapore/SingaporeHome.cshtml
+++ b/NorthWestLabs/Views/Singapore/SingaporeHome.cshtml
@@ -5,5 +5,5 @@
 
 <h2>Singapore Home</h2>
 
-<p>@Html.ActionLink("Check Quote Requests", "SeeQuotes")</p>
+<p>@Html.ActionLink("Check Quote Requests", "CurrentQuotes")</p>
 <p>@Html.ActionLink("See Work Orders", "ListWorkOrders")</p>
