--- a/NorthWestLabs/Views/Shared/_Layout.cshtml
+++ b/NorthWestLabs/Views/Shared/_Layout.cshtml
@@ -6,22 +6,20 @@
     <title>@ViewBag.Title - Northwest Labs</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/Styles/Styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+    <!-- Navbar (sit on top) -->
+    <div class="w3-top">
+        <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+            <a href="#home" class="w3-bar-item w3-button"><b>NW</b>@Html.ActionLink("Northwest Labs", "Index", "Home")</a>
+            <!-- Float links to the right. Hide them on small screens -->
+            <div class="w3-right w3-hide-small">
+                <a href="#projects" class="w3-bar-item w3-button">@Html.ActionLink("Login", "Login", "Home")</a> |
+                <a href="#about" class="w3-bar-item w3-button">@Html.ActionLink("About", "About", "Home")</a> |
+                <a href="#contact" class="w3-bar-item w3-button">@Html.ActionLink("Request Quote", "AddQuote", "Home")</a>
             </div>
         </div>
     </div>
