--- a/NorthWestLabs/Views/Home/Index.cshtml
+++ b/NorthWestLabs/Views/Home/Index.cshtml
@@ -3,24 +3,81 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<body>
+    <!-- Header -->
+    <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+        <img class="w3-image" src="~/Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg" alt="Earth" width="1500" height="800">
+        <div class="w3-display-middle w3-margin-top w3-center">
+            <h1 class="w3-xxlarge w3-text-black"><span class="w3-padding w3-black w3-opacity-min"><b>NW</b></span> <span class="w3-hide-small w3-text-black">Northwest Labs</span></h1>
+        </div>
+    </header>
 
-@Html.ActionLink("About Page", "About")
-<br />
+    <!-- Page content -->
+    <div class="w3-content w3-padding" style="max-width:1564px">
+        <!-- About Section -->
+        <div class="w3-container w3-padding-32" id="about">
+            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+        </div>
 
-@Html.ActionLink("Pricing Info", "Pricing")
-<br />
+        <div class="w3-row-padding w3-grayscale">
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+                <h3>Gary Anderson</h3>
+                <p class="w3-opacity">CEO & Founder</p>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+                <h3>Dallin Fairbanks</h3>
+                <p class="w3-opacity">Singapore Operations</p>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
+                <h3>Bonnie McDougal</h3>
+                <p class="w3-opacity">Sales Director</p>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
+                <h3>Mason Brockbank</h3>
+                <p class="w3-opacity">Pharmecutical Director</p>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+            </div>
+        </div>
 
-@Html.ActionLink("Client Log In", "ClLogin")
-<br />
 
-@Html.ActionLink("Employee Log In", "EmpLogin")
-<br />
+        <div class="jumbotron">
+            <h2>Northwest Labs</h2>
 
-@Html.ActionLink("Create Profile", "CreateProfile")
-<br />
+            @Html.ActionLink("About Page", "About")
+            <br />
 
-@Html.ActionLink("View Clients", "ViewClients")
-<br />
+            @Html.ActionLink("Pricing Info", "Pricing")
+            <br />
 
-@Html.ActionLink("Submit New Quote Request", "QuoteCreate", "Client")
+            @Html.ActionLink("Client Log In", "ClLogin")
+            <br />
+
+            @Html.ActionLink("Employee Log In", "EmpLogin")
+            <br />
+
+            @Html.ActionLink("Create Profile", "CreateProfile")
+            <br />
+
+            @Html.ActionLink("View Clients", "ViewClients")
+            <br />
+
+            @Html.ActionLink("Submit New Quote Request", "AddQuote", "Client")
+        </div>
+
+</body>
