--- a/NorthWestLabs/Views/Singapore/EditWorkOrder.cshtml
+++ b/NorthWestLabs/Views/Singapore/EditWorkOrder.cshtml
@@ -27,8 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DueDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.DueDate, htmlAttributes: new { @readonly="readonly"})
             </div>
         </div>
 
@@ -45,8 +44,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.comments, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.comments, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.comments, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.comments, htmlAttributes: new { @readonly = "readonly" })
             </div>
         </div>
 
@@ -69,8 +67,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.ClientID, new SelectList(ViewBag.Clients, "ClientID", "ClFName"))
-                @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.ClientID, htmlAttributes: new { @readonly="readonly"})
             </div>
         </div>
 
