--- a/NorthWestLabs/Views/Clients/ClientHome.cshtml
+++ b/NorthWestLabs/Views/Clients/ClientHome.cshtml
@@ -19,3 +19,6 @@
 
 @Html.ActionLink("View Profile Info", "ViewProfile", new { id = Model.ClientID })
 <br /><br />
+
+@Html.ActionLink("Pricing Info", "ClientPrice", new { id = Model.ClientID })
+<br /><br />
