--- a/NorthWestLabs/Views/Clients/CreateOrder.cshtml
+++ b/NorthWestLabs/Views/Clients/CreateOrder.cshtml
@@ -43,7 +43,7 @@
         </div>        
 
         <div class="form-group">
-            @Html.TextBoxFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2", @Value = (int?)ViewBag.clID, @readonly = "readonly" })
+            @Html.HiddenFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2", @Value = (int?)ViewBag.clID, @readonly = "readonly" })
             <!--
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ClientID, new { htmlAttributes = new { @class = "form-control" } })
