--- a/NorthWestLabs/Views/Seattle/SeattleHome.cshtml
+++ b/NorthWestLabs/Views/Seattle/SeattleHome.cshtml
@@ -3,11 +3,43 @@
     ViewBag.Title = "SeattleHome";
 }
 
-<h2>Seattle Home</h2>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <body>
-    <p>Welcome.</p>
-    @Html.ActionLink("Employees", "EmployeeIndex") <br />
-    @Html.ActionLink("Work Orders", "WorkIndex") <br />
-    @Html.ActionLink("Clients", "Index")
+    <!-- Page content -->
+    <div class="w3-content w3-padding" style="max-width:1564px">
+
+        <!-- Project Section -->
+        <div class="w3-container w3-padding-32" id="projects">
+            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Welcome Seattle Home</h3>
+        </div>
+
+        <div class="w3-row-padding">
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <div class="w3-display-container">
+                    <div class="w3-display-topleft w3-black w3-padding">@Html.ActionLink("Employees", "EmployeeIndex")</div>
+                    <img src="/w3images/house5.jpg" alt="House" style="width:100%">
+                </div>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <div class="w3-display-container">
+                    <div class="w3-display-topleft w3-black w3-padding">@Html.ActionLink("Work Orders", "WorkIndex")</div>
+                    <img src="/w3images/house2.jpg" alt="House" style="width:100%">
+                </div>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <div class="w3-display-container">
+                    <div class="w3-display-topleft w3-black w3-padding">@Html.ActionLink("Clients", "Index")</div>
+                    <img src="/w3images/house3.jpg" alt="House" style="width:100%">
+                </div>
+            </div>            
+        </div>      
+        <!--
+        <p>Welcome!</p>
+        Html.ActionLink("Employees", "EmployeeIndex") <br />
+        Html.ActionLink("Work Orders", "WorkIndex") <br />
+        Html.ActionLink("Clients", "Index")
+        -->
+    </div>
 </body>
