--- a/NorthWestLabs/Views/Seattle/SeattleHome.cshtml
+++ b/NorthWestLabs/Views/Seattle/SeattleHome.cshtml
@@ -16,15 +16,13 @@
         </div>
 
         <div class="w3-row-padding">
-            <div class="w3-col l3 m6 w3-margin-bottom">
-                <div class="w3-display-container">
-                    <div class="w3-display-topleft w3-black w3-padding">@Html.ActionLink("Employees", "EmployeeIndex")</div>
-                    <img src="/w3images/house5.jpg" alt="House" style="width:100%">
-                </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">                
+                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
+            
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
-                    <div class="w3-display-topleft w3-black w3-padding">@Html.ActionLink("Work Orders", "WorkIndex")</div>
+                    <div class="w3-display-topleft w3-black w3-padding" onclick="location.href='@Html.Action("WorkIndex")'">Work Orders</div>
                     <img src="/w3images/house2.jpg" alt="House" style="width:100%">
                 </div>
             </div>
@@ -33,7 +31,7 @@
                     <div class="w3-display-topleft w3-black w3-padding">@Html.ActionLink("Clients", "Index")</div>
                     <img src="/w3images/house3.jpg" alt="House" style="width:100%">
                 </div>
-            </div>            
+            </div>
         </div>      
         <!--
         <p>Welcome!</p>
