--- a/NorthWestLabs/Views/Home/About.cshtml
+++ b/NorthWestLabs/Views/Home/About.cshtml
@@ -12,7 +12,7 @@
             Here at Northwest Labs we strive to get the precise, well documented and accurately reported results that you need.
         </li>
         <li>
-            We process every order like it is our only order becasue we beleive that our customers deserve the highest quality results.
+            We process every order like it is our only order because we beleive that our customers deserve the highest quality results.
         </li>
         
     </ul>
@@ -29,7 +29,7 @@
             Email Us: info@northwestlabs.net
         </li>
         <li>
-            Create and Account Today!
+            Create an Account Today!
         </li>
     </ul>
 </div>
