--- a/NorthWestLabs/Views/Shared/_Layout.cshtml
+++ b/NorthWestLabs/Views/Shared/_Layout.cshtml
@@ -14,12 +14,12 @@
     <!-- Navbar (sit on top) -->
     <div class="w3-top">
         <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-            <a href="#home" class="w3-bar-item w3-button"><b>NW</b>@Html.ActionLink("Northwest Labs", "Index", "Home")</a>
+            <a class="w3-bar-item w3-button">@Html.ActionLink("Northwest Labs", "Index", "Home")</a>
             <!-- Float links to the right. Hide them on small screens -->
             <div class="w3-right w3-hide-small">
-                <a href="#projects" class="w3-bar-item w3-button">@Html.ActionLink("Login", "Login", "Home")</a> |
+                <a class="w3-bar-item w3-button">@Html.ActionLink("Login", "Login", "Home")</a> |
                 <a href="#about" class="w3-bar-item w3-button">@Html.ActionLink("About", "About", "Home")</a> |
-                <a href="#contact" class="w3-bar-item w3-button">@Html.ActionLink("Request Quote", "AddQuote", "Home")</a>
+                <a class="w3-bar-item w3-button">@Html.ActionLink("Request Quote", "AddQuote", "Home")</a>
             </div>
         </div>
     </div>
