--- a/NorthWestLabs/Views/Home/Index.cshtml
+++ b/NorthWestLabs/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <body>
     <!-- Header -->
     <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-        <img class="w3-image" src="~/Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg" alt="Earth" width="1500" height="800">
+        <img class="w3-image" src="~/Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg" alt="Chemicals" width="1500" height="800">
         <div class="w3-display-middle w3-margin-top w3-center">
             <h1 class="w3-xxlarge w3-text-black"><span class="w3-padding w3-black w3-opacity-min"><b>NW</b></span> <span class="w3-hide-small w3-text-black">Northwest Labs</span></h1>
         </div>
@@ -26,58 +26,29 @@
 
         <div class="w3-row-padding w3-grayscale">
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+                <img src="~/Content/Images/gary.jpg" alt="John" style="width:100%">
                 <h3>Gary Anderson</h3>
                 <p class="w3-opacity">CEO & Founder</p>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+                <p><button class="w3-button w3-light-grey w3-block" onclick="location.href='@Html.Action("CreateProfile")'">Create New Profile</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+                <img src="~/Content/Images/dallin.jpg" alt="Jane" style="width:100%">
                 <h3>Dallin Fairbanks</h3>
                 <p class="w3-opacity">Singapore Operations</p>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+                <p><button class="w3-button w3-light-grey w3-block" onclick="location.href='@Html.Action("Pricing")'">Pricing</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
+                <img src="~/Content/Images/bonnie.jpg" alt="Mike" style="width:100%">
                 <h3>Bonnie McDougal</h3>
                 <p class="w3-opacity">Sales Director</p>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+                <p><button class="w3-button w3-light-grey w3-block" onclick="location.href='@Html.Action("AddQuote")'">Quote Request</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
+                <img src="~/Content/Images/mason.jpg" alt="Dan" style="width:100%">
                 <h3>Mason Brockbank</h3>
                 <p class="w3-opacity">Pharmecutical Director</p>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+                <p><button class="w3-button w3-light-grey w3-block" onclick="location.href='@Html.Action("Login")'">Login</button></p>
             </div>
         </div>
-
-
-        <div class="jumbotron">
-            <h2>Northwest Labs</h2>
-
-            @Html.ActionLink("About Page", "About")
-            <br />
-
-            @Html.ActionLink("Pricing Info", "Pricing")
-            <br />
-
-            @Html.ActionLink("Client Log In", "ClLogin")
-            <br />
-
-            @Html.ActionLink("Employee Log In", "EmpLogin")
-            <br />
-
-            @Html.ActionLink("Create Profile", "CreateProfile")
-            <br />
-
-            @Html.ActionLink("View Clients", "ViewClients")
-            <br />
-
-            @Html.ActionLink("Submit New Quote Request", "AddQuote", "Client")
-        </div>
-
+    </div>
 </body>
